--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sinan Oral
-url: "https://sinanoral.com"
-baseurl: "/"
+url: "https://sinan-oral.github.io"
+baseurl: "/sinano"
 
 markdown: kramdown
 
